🚸 💄 resolve ui spacings

--- a/src/App.css
+++ b/src/App.css
@@ -180,8 +180,7 @@ body {
   background-color: white;
   width: 300px;
   margin: 0 auto;
-  margin-top: 3rem;
-  padding: 2rem;
+  padding: calc(10%) 2rem;
 }
 
 .sign-in-icon {
